<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:srcCompat="@drawable/calculadora_logo"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/campo1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/background_light"
        android:hint="@string/field_one"
        android:inputType="number"/>

    <EditText
        android:id="@+id/campo2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/background_light"
        android:hint="@string/field_two"
        android:inputType="number"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/sum"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/btnSuma"
            android:text="@string/subtract"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/btnResta"
            android:text="@string/plus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btnMultiplicar"
            android:text="@string/divide"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/etiResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</LinearLayout>